Changed: Fixed the footer on mobile.

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -12,6 +12,8 @@ body {
     bottom: 0;
     width: 100%;
     height: 5em; /* Set the fixed height of the footer here */
-    line-height: 5em; /* Vertically center the text there */
-    background-color: #f5f5f5;
+}
+
+.footer > .container-md {
+    height: 5em;
 }
